--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "mongodb": "^6.8.0",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
